--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 <head>
     <meta charset = "UTF-8">
     <title>
-        Porfolio Project
+        Portfolio Project
     </title>
 </head>
 
 <body>
    <h1>
-    Nghi Hoang' Porfolio
+    Nghi Hoang's Portfolio
    </h1>
    <h2>
     I am a Beginner Web Developer
